--- a/public/loader.css
+++ b/public/loader.css
@@ -21,12 +21,18 @@ html {
   inset-inline-start: calc(50% - 45px);
 }
 
+@media (max-width: 500px) {
+  .loading-logo {
+    margin-block-start: -3em;
+  }
+}
+
 .loading {
   position: absolute;
   box-sizing: border-box;
   border: 3px solid transparent;
-  block-size: 55px;
   border-radius: 50%;
+  block-size: 55px;
   inline-size: 55px;
   inset-block-start: 50%;
   inset-inline-start: calc(50% - 35px);
@@ -38,9 +44,9 @@ html {
   position: absolute;
   box-sizing: border-box;
   border: 3px solid transparent;
+  border-radius: 50%;
   block-size: 100%;
   border-inline-start: 3px solid var(--initial-loader-color, #eee);
-  border-radius: 50%;
   inline-size: 100%;
 }
 
