--- a/resources/ts/@layouts/styles/_default-layout.scss
+++ b/resources/ts/@layouts/styles/_default-layout.scss
@@ -5,8 +5,9 @@
 @use "@configured-variables" as variables;
 
 html,
-body {
-  min-block-size: 100%;
+body,
+#app {
+  block-size: 100%;
 }
 
 .layout-page-content {
