--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -55,7 +55,7 @@ th {
 }
 
 .pg-cancel {
-  background: linear-gradient(72.47deg, rgb(255, 70, 70) 22.16%, rgba(rgb(255, 70, 70), 0.7) 76.47%);
+  background: linear-gradient(72.47deg, rgb(255, 70, 70) 22.16%, rgba(rgb(255, 70, 70), 0.7) 76.47%) !important;
   box-shadow: 0 3px 1px -2px var(--v-shadow-key-umbra-opacity, rgba(0, 0, 0, 20%)), 0 2px 2px 0 var(--v-shadow-key-penumbra-opacity, rgba(0, 0, 0, 14%)), 0 1px 5px 0 var(--v-shadow-key-penumbra-opacity, rgba(0, 0, 0, 12%));
-  color: white;
+  color: white !important;
 }
