refector: resource optimization

--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -39,6 +39,7 @@
 
 .check-label {
   display: flex !important;
+  flex-direction: column !important;
 }
 
 .check-label > .v-input__control > .v-selection-control > .v-label {
@@ -56,6 +57,6 @@ th {
 
 .pg-cancel {
   background: linear-gradient(72.47deg, rgb(255, 70, 70) 22.16%, rgba(rgb(255, 70, 70), 0.7) 76.47%) !important;
-  box-shadow: 0 3px 1px -2px var(--v-shadow-key-umbra-opacity, rgba(0, 0, 0, 20%)), 0 2px 2px 0 var(--v-shadow-key-penumbra-opacity, rgba(0, 0, 0, 14%)), 0 1px 5px 0 var(--v-shadow-key-penumbra-opacity, rgba(0, 0, 0, 12%));
+  box-shadow: 0 3px 1px -2px var(--v-shadow-key-umbra-opacity, rgba(0, 0, 0, 20%)), 0 2px 2px 0 var(--v-shadow-key-penumbra-opacity, rgba(0, 0, 0, 14%)), 0 1px 5px 0 var(--v-shadow-key-penumbra-opacity, rgba(0, 0, 0, 12%)) !important;
   color: white !important;
 }
