feat: batch settle

--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -40,6 +40,7 @@
 .check-label {
   display: flex !important;
   flex-direction: column !important;
+  min-inline-size: 7em;
 }
 
 .check-label > .v-input__control > .v-selection-control > .v-label {
