feat: batch settle history function

--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -40,7 +40,11 @@
 .check-label {
   display: flex !important;
   flex-direction: column !important;
-  min-inline-size: 7em;
+  min-inline-size: 2em;
+}
+
+.check-label > .v-input__control {
+  display: block !important;
 }
 
 .check-label > .v-input__control > .v-selection-control > .v-label {
