--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -51,6 +51,13 @@
   font-weight: bold !important;
 }
 
+.check-label-container {
+  display: inline-flex;
+  align-items: center;
+  font-weight: bold;
+  vertical-align: middle;
+}
+
 th {
   font-weight: bold !important;
 }
