feat: PG-brightfixC3

--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -1,5 +1,9 @@
 // Write your overrides
 
+body {
+  background: rgb(var(--v-theme-background));
+}
+
 .v-field__outline {
   --v-field-border-opacity: 0.78 !important;
 }
