--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -101,14 +101,6 @@ th {
   --v-field-padding-bottom: 1px !important;
 }
 
-@media (max-width: 600px) {
-  .dp__menu_inner {
-    block-size: 38em !important;
-  }
-}
-
-@media (min-width: 600px) {
-  .dp__menu_inner {
-    block-size: 23em !important;
-  }
+.dp__calendar {
+  block-size: 18em !important;
 }
