feat: buddypay add function

--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -31,6 +31,10 @@ body {
   text-align: center !important;
 }
 
+.list-square th {
+
+}
+
 .edit-link {
   color: rgb(var(--v-global-theme-primary)) !important;
   cursor: pointer;
