--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -81,6 +81,12 @@ th {
   color: white !important;
 }
 
+.single-deposit-cancel-job {
+  background: linear-gradient(72.47deg, rgb(233, 172, 58) 22.16%, rgba(rgb(247, 186, 18), 0.7) 76.47%) !important;
+  box-shadow: 0 3px 1px -2px var(--v-shadow-key-umbra-opacity, rgba(0, 0, 0, 20%)), 0 2px 2px 0 var(--v-shadow-key-penumbra-opacity, rgba(0, 0, 0, 14%)), 0 1px 5px 0 var(--v-shadow-key-penumbra-opacity, rgba(0, 0, 0, 12%)) !important;
+  color: white !important;
+}
+
 .retry-realtime-deposit {
   background: linear-gradient(72.47deg, rgb(70, 113, 255) 22.16%, rgba(rgb(70, 113, 255), 0.7) 76.47%) !important;
   box-shadow: 0 3px 1px -2px var(--v-shadow-key-umbra-opacity, rgba(0, 0, 0, 20%)), 0 2px 2px 0 var(--v-shadow-key-penumbra-opacity, rgba(0, 0, 0, 14%)), 0 1px 5px 0 var(--v-shadow-key-penumbra-opacity, rgba(0, 0, 0, 12%)) !important;
