feat: noti urls payment modules

--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -32,8 +32,8 @@ body {
   text-align: center !important;
 }
 
-.list-square th {
-
+.v-table__wrapper > table > tbody > tr:hover {
+  background: rgba(var(--v-theme-primary), 10%);
 }
 
 .edit-link {
