--- a/resources/styles/@core/base/_components.scss
+++ b/resources/styles/@core/base/_components.scss
@@ -161,6 +161,13 @@
 
 // 👉 Switch
 .v-switch .v-selection-control:not(.v-selection-control--dirty) .v-switch__thumb {
+  box-shadow:
+    0 1px 2px rgba(0, 0, 0, 7%),
+    0 2px 4px rgba(0, 0, 0, 7%),
+    0 4px 8px rgba(0, 0, 0, 7%),
+    0 8px 16px rgba(0, 0, 0, 7%),
+    0 16px 32px rgba(0, 0, 0, 7%),
+    0 32px 64px rgba(0, 0, 0, 7%);
   color: #fff !important;
 }
 
